Adding slides attribute directive.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-    <title-page></title-page>
-    <closing-page></closing-page>
+    <title-page class="slide"></title-page>
+    <closing-page class="slide"></closing-page>
 </div>
