--- a/app/slides/title-page/title-page.component.html
+++ b/app/slides/title-page/title-page.component.html
@@ -1,4 +1,6 @@
 <div>
+    <img src="/app/slides/title-page/angular.svg">
     <h1>The New Angular2 Framework</h1>
-
+    <h2>@dfbaskin</h2>
+    <h2>dfbaskin@gmail.com</h2>
 </div>
