--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,19 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
 body {
   background: linear-gradient(to bottom, #ffffff, #e5e5e5);
   position: relative;
 }
+
+.slide {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 2px dotted green;
+}
+
