--- a/app/slides/title-page/title-page.component.scss
+++ b/app/slides/title-page/title-page.component.scss
@@ -1,11 +1,12 @@
 
 div {
 
-  background-image: url('/app/slides/title-page/angular.svg');
-  background-position-x: left;
-  background-position-y: center;
-  background-repeat: no-repeat;
-  background-size: 60%;
+  > img {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    height: 75%;
+  }
 
   h1 {
     text-align: center;
