Adding keyboard handler.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div (keyup)="handleKey($event)" tabindex="1">
     <title-page class="slide"></title-page>
     <closing-page class="slide"></closing-page>
 </div>
