Adding add slide source updates.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,5 @@
 <div (keyup)="handleKey($event)" tabindex="1">
     <title-page class="slide"></title-page>
+    <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
