Adding content pages.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,7 @@
 <div (keyup)="handleKey($event)" tabindex="1">
     <title-page class="slide"></title-page>
+    <overview-page class="slide"></overview-page>
+    <react-overview class="slide"></react-overview>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
