Adding content pages.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -2,6 +2,7 @@
     <title-page class="slide"></title-page>
     <overview-page class="slide"></overview-page>
     <react-overview class="slide"></react-overview>
+    <general-differences class="slide"></general-differences>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
