--- a/app/slides/title-page/title-page.component.html
+++ b/app/slides/title-page/title-page.component.html
@@ -1,6 +1,14 @@
 <div>
-    <img src="/app/slides/title-page/angular.svg">
+    <img [src]="resolvePath('angular.svg')">
     <h1>The New Angular2 Framework</h1>
-    <h2>@dfbaskin</h2>
-    <h2>dfbaskin@gmail.com</h2>
+    <div>
+        <h2>
+            <img [src]="resolvePath('Twitter_logo_blue.png')" class="twitter-logo">
+            @dfbaskin
+        </h2>
+        <h2>
+            <img [src]="resolvePath('email.png')" class="email-logo">
+            dfbaskin@gmail.com
+        </h2>
+    </div>
 </div>
