--- a/app/slides/title-page/title-page.component.scss
+++ b/app/slides/title-page/title-page.component.scss
@@ -3,12 +3,27 @@ div {
 
   > img {
     position: absolute;
-    top: 25%;
-    left: 25%;
-    height: 75%;
+    top: 0vh;
+    left: 0vw;
+    height: 75vh;
   }
 
   h1 {
-    text-align: center;
+    position: absolute;
+    top: 10vh;
+    left: 35vw;
+    font-size: 10vh;
+  }
+
+  div {
+
+    img {
+      height: 3vw;
+    }
+
+    position: absolute;
+    top: 50vh;
+    left: 45vw;
+    font-size: 4vh;
   }
 }
