Adding Source Code formatting.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,6 +3,7 @@
     <overview-page class="slide"></overview-page>
     <react-overview class="slide"></react-overview>
     <general-differences class="slide"></general-differences>
+    <components-overview class="slide"></components-overview>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
