Adding source code view component.

--- a/app/slides/components-overview/components-overview.component.html
+++ b/app/slides/components-overview/components-overview.component.html
@@ -1,9 +1,5 @@
 
 <div>
     <h1>Components</h1>
-    <pre>
-<code class="lang-javascript">
-{{sourceCode$ | async}}
-</code>
-    </pre>
+    <source-code-view language="javascript" [relativeTo]="thisModuleId" name="example-component.ts.txt"></source-code-view>
 </div>
