--- a/app/app.component.html
+++ b/app/app.component.html
@@ -4,6 +4,7 @@
     <react-overview class="slide"></react-overview>
     <general-differences class="slide"></general-differences>
     <components-overview class="slide"></components-overview>
+    <components-inputs class="slide"></components-inputs>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
