--- a/app/slides/components-overview/components-overview.component.html
+++ b/app/slides/components-overview/components-overview.component.html
@@ -1,5 +1,6 @@
 
 <div>
     <h1>Components</h1>
-    <source-code-view language="javascript" [relativeTo]="thisModuleId" name="example-component.ts.txt"></source-code-view>
+    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="example-component.ts.txt"></source-code-view>
+    <source-code-view language="html" [relativeTo]="thisModuleId" name="example-component.html.txt"></source-code-view>
 </div>
