--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,6 +5,7 @@
     <general-differences class="slide"></general-differences>
     <components-overview class="slide"></components-overview>
     <components-inputs class="slide"></components-inputs>
+    <components-outputs class="slide"></components-outputs>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
