--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,6 +6,7 @@
     <components-overview class="slide"></components-overview>
     <components-inputs class="slide"></components-inputs>
     <components-outputs class="slide"></components-outputs>
+    <components-tree class="slide"></components-tree>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
