--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,6 +7,7 @@
     <components-inputs class="slide"></components-inputs>
     <components-outputs class="slide"></components-outputs>
     <components-tree class="slide"></components-tree>
+    <components-smart-dumb class="slide"></components-smart-dumb>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
