--- a/app/app.component.html
+++ b/app/app.component.html
@@ -6,6 +6,7 @@
     <components-overview class="slide"></components-overview>
     <components-inputs class="slide"></components-inputs>
     <components-outputs class="slide"></components-outputs>
+    <template-syntax class="slide"></template-syntax>
     <components-tree class="slide"></components-tree>
     <components-smart-dumb class="slide"></components-smart-dumb>
     <!-- next slide here -->
