--- a/app/slides/general-differences/general-differences.component.html
+++ b/app/slides/general-differences/general-differences.component.html
@@ -16,7 +16,7 @@
             <li>More of a comprehensive framework</li>
             <li>Markup in Annotated HTML</li>
             <li>Decorators (Meta Data) added to classes</li>
-            <li>Imperative (class-based)</li>
+            <li>Declarative Markup / Imperative Code</li>
         </ul>
     </div>
 </div>
