--- a/app/slides/overview-page/overview-page.component.html
+++ b/app/slides/overview-page/overview-page.component.html
@@ -1,10 +1,11 @@
 
 <div>
-    <p>Angular1 building to Angular2</p>
+    <p>Angular2 building from Angular1</p>
     <p>Modern Web Applications</p>
     <ul>
-        <li>Components</li>
-        <li>One-Way Data Binding</li>
+        <li>Web Components</li>
+        <li>Unidirectional Data Flow</li>
         <li>Observables</li>
+        <li>Web Workers</li>
     </ul>
 </div>
