--- a/app/app.component.html
+++ b/app/app.component.html
@@ -9,6 +9,7 @@
     <template-syntax class="slide"></template-syntax>
     <components-tree class="slide"></components-tree>
     <components-smart-dumb class="slide"></components-smart-dumb>
+    <dependency-injection class="slide"></dependency-injection>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
