--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,6 +10,9 @@
     <components-tree class="slide"></components-tree>
     <components-smart-dumb class="slide"></components-smart-dumb>
     <dependency-injection class="slide"></dependency-injection>
+    <why-not-promises class="slide"></why-not-promises>
+    <observables class="slide"></observables>
+    <socket-observable-example class="slide"></socket-observable-example>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
