--- a/app/slides/general-differences/general-differences.component.html
+++ b/app/slides/general-differences/general-differences.component.html
@@ -7,6 +7,7 @@
             <li>Focuses on the "View"</li>
             <li>Uses JSX to generate Javascript Code</li>
             <li>Derived Classes or Stateless Functions</li>
+            <li>Shared Context</li>
             <li>Moving towards Functional paradigm</li>
         </ul>
     </div>
@@ -16,6 +17,7 @@
             <li>More of a comprehensive framework</li>
             <li>Markup in Annotated HTML</li>
             <li>Decorators (Meta Data) added to classes</li>
+            <li>Dependency Injection</li>
             <li>Declarative Markup / Imperative Code</li>
         </ul>
     </div>
