--- a/app/app.component.html
+++ b/app/app.component.html
@@ -13,6 +13,7 @@
     <why-not-promises class="slide"></why-not-promises>
     <observables class="slide"></observables>
     <socket-observable-example class="slide"></socket-observable-example>
+    <routing class="slide"></routing>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
