--- a/app/app.component.html
+++ b/app/app.component.html
@@ -14,6 +14,7 @@
     <observables class="slide"></observables>
     <socket-observable-example class="slide"></socket-observable-example>
     <routing class="slide"></routing>
+    <other-features class="slide"></other-features>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
