--- a/app/slides/observables/observables.component.html
+++ b/app/slides/observables/observables.component.html
@@ -7,11 +7,22 @@
     </div>
 
     <ul>
-        <li>Stream of</li>
-        <ul>
-            <li>any number of things</li>
-            <li>over any lenght of time</li>
-        </ul>
+        <li>
+            Stream of
+            <ul>
+                <li>any number of things</li>
+                <li>over any lenght of time</li>
+            </ul>
+        </li>
+        <li>
+            Helps With
+            <ul>
+                <li>Memory Leaks (unsubscribe)</li>
+                <li>Race Conditions</li>
+                <li>Complex State Machines</li>
+                <li>Error Handling</li>
+            </ul>
+        </li>
         <li>Lazy (requires Subscription)</li>
         <li>Fully cancellable (including tear-down)</li>
         <li>Orchestration (like LoDash for async)</li>
