--- a/app/app.component.html
+++ b/app/app.component.html
@@ -15,6 +15,7 @@
     <socket-observable-example class="slide"></socket-observable-example>
     <routing class="slide"></routing>
     <other-features class="slide"></other-features>
+    <many-hats class="slide"></many-hats>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
