--- a/app/app.component.html
+++ b/app/app.component.html
@@ -16,6 +16,9 @@
     <routing class="slide"></routing>
     <other-features class="slide"></other-features>
     <many-hats class="slide"></many-hats>
+    <angular-universal class="slide"></angular-universal>
+    <angular-progressive-web class="slide"></angular-progressive-web>
+    <angular-nativescript class="slide"></angular-nativescript>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
 </div>
