--- a/app/slides/closing-page/closing-page.component.html
+++ b/app/slides/closing-page/closing-page.component.html
@@ -1,16 +1,15 @@
-<div>
-    <h1>Thanks!</h1>
-    <h3>
-        http://github.com/dfbaskin/the-new-angular2-framework
-    </h3>
+<div class="content">
+    <div>Thanks!</div>
+    <div>http://github.com/dfbaskin/the-new-angular2-framework</div>
+    <div>Questions?</div>
     <div>
-        <h2>
-            <img [src]="resolvePath('Twitter_logo_blue.png')" class="twitter-logo">
-            @dfbaskin
-        </h2>
-        <h2>
-            <img [src]="resolvePath('email.png')" class="email-logo">
-            dfbaskin@gmail.com
-        </h2>
+        <span>
+            <img [src]="resolvePath('Twitter_logo_blue.png')"> @dfbaskin
+        </span>
+    </div>
+    <div>
+        <span>
+            <img [src]="resolvePath('email.png')"> dfbaskin@gmail.com
+        </span>
     </div>
 </div>
