--- a/app/slides/closing-page/closing-page.component.scss
+++ b/app/slides/closing-page/closing-page.component.scss
@@ -1,31 +1,40 @@
 
 div {
 
-  h1 {
-    position: absolute;
-    top: 10vh;
-    left: 35vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    height: 2vw;
+    display: inline-block;
+  }
+
+  > div:nth-of-type(1) {
     font-size: 10vh;
+    font-weight: bold;
   }
 
-  h3 {
-    position: absolute;
-    top: 30vh;
-    left: 0vw;
-    width: 100vw;
+  > div:nth-of-type(2) {
     font-size: 4vh;
-    text-align: center;
+    margin-bottom: 8vh;
   }
 
-  div {
+  > div:nth-of-type(3) {
+    font-size: 10vh;
+    margin-bottom: 8vh;
+    font-weight: bold;
+  }
 
-    img {
-      height: 3vw;
-    }
+  > div:nth-of-type(4) {
+    white-space: nowrap;
+    font-size: 4vh;
+    margin-bottom: 2vh;
+  }
 
-    position: absolute;
-    top: 50vh;
-    left: 25vw;
+  > div:nth-of-type(5) {
+    white-space: nowrap;
     font-size: 4vh;
   }
 }
