Updating content and styles.

--- a/app/slides/title-page/title-page.component.html
+++ b/app/slides/title-page/title-page.component.html
@@ -1,14 +1,9 @@
-<div>
-    <img [src]="resolvePath('angular.svg')">
-    <h1>The New Angular2 Framework</h1>
+<div class="content">
+    <div>The New Angular2<br />Framework</div>
     <div>
-        <h2>
-            <img [src]="resolvePath('Twitter_logo_blue.png')" class="twitter-logo">
-            @dfbaskin
-        </h2>
-        <h2>
-            <img [src]="resolvePath('email.png')" class="email-logo">
-            dfbaskin@gmail.com
-        </h2>
+        <span><img [src]="resolvePath('Twitter_logo_blue.png')" class="twitter-logo"> @dfbaskin</span>
+    </div>
+    <div>
+        <span><img [src]="resolvePath('email.png')" class="email-logo"> dfbaskin@gmail.com</span>
     </div>
 </div>
