--- a/app/slides/title-page/title-page.component.scss
+++ b/app/slides/title-page/title-page.component.scss
@@ -1,29 +1,32 @@
 
-div {
+div.content {
 
-  > img {
-    position: absolute;
-    top: 0vh;
-    left: 0vw;
-    height: 75vh;
+  background: url("app/slides/title-page/angular.svg") no-repeat;
+
+  > div {
+    text-align: right;
+    z-index: 100;
   }
 
-  h1 {
-    position: absolute;
-    top: 10vh;
-    left: 35vw;
-    font-size: 10vh;
+  span > img {
+    height: 2vw;
   }
 
-  div {
+  > div:nth-of-type(1) {
+    margin-top: 30vh;
+    font-size: 8vh;
+    font-weight: bold;
+    margin-bottom: 10vh;
+  }
 
-    img {
-      height: 3vw;
-    }
+  > div:nth-of-type(2) {
+    white-space: nowrap;
+    font-size: 4vh;
+    margin-bottom: 2vh;
+  }
 
-    position: absolute;
-    top: 50vh;
-    left: 45vw;
+  > div:nth-of-type(3) {
+    white-space: nowrap;
     font-size: 4vh;
   }
 }
