--- a/app/slides/overview-page/overview-page.component.html
+++ b/app/slides/overview-page/overview-page.component.html
@@ -1,11 +1,16 @@
 
-<div>
-    <p>Angular2 building from Angular1</p>
-    <p>Modern Web Applications</p>
+<div class="content">
+    <h1>Angular2</h1>
     <ul>
-        <li>Web Components</li>
-        <li>Unidirectional Data Flow</li>
-        <li>Observables</li>
-        <li>Web Workers</li>
+        <li>Lessons learned from Angular1</li>
+        <li>
+            Modern Web Applications
+            <ul>
+                <li>Web Components</li>
+                <li>Unidirectional Data Flow</li>
+                <li>Observables</li>
+                <li>Web Workers</li>
+            </ul>
+        </li>
     </ul>
 </div>
