--- a/app/slides/overview-page/overview-page.component.scss
+++ b/app/slides/overview-page/overview-page.component.scss
@@ -1,5 +1,23 @@
 
-/* overview-page */
-     
-div {
+div.content {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    font-size: 10vh;
+    font-weight: bold;
+    margin-bottom: 10vh;
+  }
+
+  li {
+    font-size: 4vh;
+    margin-bottom: 1vh;
+    > ul {
+      margin-top: 1vh;
+    }
+  }
+
 }
