--- a/app/slides/general-differences/general-differences.component.html
+++ b/app/slides/general-differences/general-differences.component.html
@@ -1,24 +1,34 @@
 
-<div>
-    <h1>General Differences</h1>
-    <div>
-        <h2>React</h2>
-        <ul>
-            <li>Focuses on the "View"</li>
-            <li>Uses JSX to generate Javascript Code</li>
-            <li>Derived Classes or Stateless Functions</li>
-            <li>Shared Context</li>
-            <li>Moving towards Functional paradigm</li>
-        </ul>
-    </div>
-    <div>
-        <h2>Angular2</h2>
-        <ul>
-            <li>More of a comprehensive framework</li>
-            <li>Markup in Annotated HTML</li>
-            <li>Decorators (Meta Data) added to classes</li>
-            <li>Dependency Injection</li>
-            <li>Declarative Markup / Imperative Code</li>
-        </ul>
-    </div>
+<div class="content">
+    <h1>Differences</h1>
+    <table>
+        <thead>
+        <tr>
+            <th>React</th>
+            <th>Angular</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Focuses on the "View"</td>
+            <td>More of a Comprehensive Framework</td>
+        </tr>
+        <tr>
+            <td>Uses JSX to Generate Javascript Code</td>
+            <td>Markup in Annotated HTML</td>
+        </tr>
+        <tr>
+            <td>Stateless Functions (or Derived Classes)</td>
+            <td>Decorators (Metadata) Added to Classes</td>
+        </tr>
+        <tr>
+            <td>Shared Context</td>
+            <td>Dependency Injection</td>
+        </tr>
+        <tr>
+            <td>Functional Paradigm</td>
+            <td>Declarative Markup / Imperative Code</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
