--- a/app/slides/general-differences/general-differences.component.scss
+++ b/app/slides/general-differences/general-differences.component.scss
@@ -1,5 +1,29 @@
 
-/* general-differences */
-     
-div {
+div.content {
+
+  text-align: center;
+
+  h1 {
+    font-size: 10vh;
+    font-weight: bold;
+    margin-bottom: 2vh;
+  }
+
+  table {
+    width: 100%;
+
+    thead tr th {
+      border-bottom: 1px solid gray;
+    }
+
+    tr {
+      height: 7vh;
+    }
+
+    th, td {
+      font-size: 3vh;
+      padding: 1vw 1vh;
+    }
+  }
+
 }
