Updating content and styles.

--- a/app/slides/components-inputs/components-inputs.component.html
+++ b/app/slides/components-inputs/components-inputs.component.html
@@ -1,6 +1,8 @@
 
-<div>
-    <h1>Components Inputs</h1>
-    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="components-inputs.ts.txt"></source-code-view>
-    <source-code-view language="html" [relativeTo]="thisModuleId" name="components-inputs.html.txt"></source-code-view>
+<div class="content">
+    <h1>Component Inputs</h1>
+    <div>
+        <source-code-view language="typescript" [relativeTo]="thisModuleId" name="components-inputs.ts.txt"></source-code-view>
+        <source-code-view language="html" [relativeTo]="thisModuleId" name="components-inputs.html.txt"></source-code-view>
+    </div>
 </div>
