--- a/app/slides/components-outputs/components-outputs.component.html
+++ b/app/slides/components-outputs/components-outputs.component.html
@@ -1,6 +1,8 @@
 
-<div>
-    <h1>Components Outputs</h1>
-    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="components-outputs.ts.txt"></source-code-view>
-    <source-code-view language="html" [relativeTo]="thisModuleId" name="components-outputs.html.txt"></source-code-view>
+<div class="content">
+    <h1>Component Outputs</h1>
+    <div>
+        <source-code-view language="typescript" [relativeTo]="thisModuleId" name="components-outputs.ts.txt"></source-code-view>
+        <source-code-view language="html" [relativeTo]="thisModuleId" name="components-outputs.html.txt"></source-code-view>
+    </div>
 </div>
