--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,3 +26,9 @@ body {
   right: 5vw;
   overflow: auto;
 }
+
+source-code-view {
+  border: 1px solid #eeeeee;
+  background-color: #eeeeee;
+  overflow: auto;
+}
