--- a/app/slides/components-overview/components-overview.component.html
+++ b/app/slides/components-overview/components-overview.component.html
@@ -1,6 +1,8 @@
 
-<div>
+<div class="content">
     <h1>Components</h1>
-    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="example-component.ts.txt"></source-code-view>
-    <source-code-view language="html" [relativeTo]="thisModuleId" name="example-component.html.txt"></source-code-view>
+    <div>
+        <source-code-view language="typescript" [relativeTo]="thisModuleId" name="example-component.ts.txt"></source-code-view>
+        <source-code-view language="html" [relativeTo]="thisModuleId" name="example-component.html.txt"></source-code-view>
+    </div>
 </div>
