--- a/app/slides/components-smart-dumb/components-smart-dumb.component.html
+++ b/app/slides/components-smart-dumb/components-smart-dumb.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="content">
     <h1>Component Organization</h1>
     <img [src]="resolvePath('smart-dump-components.svg')">
 </div>
