--- a/app/slides/components-smart-dumb/components-smart-dumb.component.scss
+++ b/app/slides/components-smart-dumb/components-smart-dumb.component.scss
@@ -1,5 +1,18 @@
 
-/* components-smart-dumb */
-     
-div {
+div.content {
+
+  text-align: center;
+
+  > h1 {
+    font-size: 5vh;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+
+  > img {
+    padding: 0;
+    margin: 0;
+    height: 80vh;
+  }
+
 }
