--- a/app/slides/components-tree/components-tree.component.html
+++ b/app/slides/components-tree/components-tree.component.html
@@ -1,5 +1,5 @@
 
-<div (click)="toggleShowOptimized()">
+<div class="content" (click)="toggleShowOptimized()">
     <h1>Component Tree</h1>
     <img [src]="resolvePath('component-tree.svg')" *ngIf="!showOptimized">
     <img [src]="resolvePath('component-tree-optimized.svg')" *ngIf="showOptimized">
