--- a/app/slides/template-syntax/template-syntax.component.scss
+++ b/app/slides/template-syntax/template-syntax.component.scss
@@ -1,25 +1,35 @@
+div.content {
 
-/* template-syntax */
-     
-div {
+  display: flex;
+  flex-direction: column;
 
-  h2 {
-    margin-top: 5vh;
-    margin-bottom: 0;
-    border-bottom: 1px solid gray;
+  > h1 {
+    text-align: center;
+    font-size: 5vh;
+    font-weight: bold;
+    margin-bottom: 4vh;
   }
 
   > div {
-    position: absolute;
-    top: 10vh;
-    width: 35vw;
-  }
 
-  > div:nth-of-type(1) {
-    left: 10vw;
-  }
+    display: flex;
+    flex-direction: row;
 
-  > div:nth-of-type(2) {
-    left: 50vw;
+    > div {
+      margin: 0 2vw;
+      flex-grow: 1;
+
+      h2 {
+        font-size: 2.5vh;
+        font-weight: bold;
+        margin-top: 2vh;
+        margin-bottom: 0;
+        border-bottom: 1px solid gray;
+      }
+
+      source-code-view {
+        border: none;
+      }
+    }
   }
 }
