Updating content and styles.

--- a/app/slides/observables/observables.component.html
+++ b/app/slides/observables/observables.component.html
@@ -1,11 +1,9 @@
 
-<div>
-    <h1>Observables</h1>
-    <div>
-        <img [src]="resolvePath('Rx_Logo_S.png')" class="twitter-logo">
-        <h2>RxJS</h2>
-    </div>
-
+<div class="content">
+    <h1>
+        <img [src]="resolvePath('Rx_Logo_S.png')">
+        <span>Observables (RxJS)</span>
+    </h1>
     <ul>
         <li>
             Stream of
@@ -28,5 +26,4 @@
         <li>Orchestration (like LoDash for async)</li>
         <li>Observables declare intent</li>
     </ul>
-
 </div>
