--- a/app/slides/socket-observable-example/socket-observable-example.component.scss
+++ b/app/slides/socket-observable-example/socket-observable-example.component.scss
@@ -1,5 +1,8 @@
+div.content {
 
-/* socket-observable-example */
-     
-div {
+  h1 {
+    font-size: 5vh;
+    font-weight: bold;
+    text-align: center;
+  }
 }
