--- a/app/slides/dependency-injection/dependency-injection.component.html
+++ b/app/slides/dependency-injection/dependency-injection.component.html
@@ -1,6 +1,8 @@
 
-<div>
+<div class="content">
     <h1>Dependency Injection</h1>
-    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="di-config.ts.txt"></source-code-view>
-    <source-code-view language="typescript" [relativeTo]="thisModuleId" name="di-usage.ts.txt"></source-code-view>
+    <div>
+        <source-code-view language="typescript" [relativeTo]="thisModuleId" name="di-config.ts.txt"></source-code-view>
+        <source-code-view language="typescript" [relativeTo]="thisModuleId" name="di-usage.ts.txt"></source-code-view>
+    </div>
 </div>
