--- a/app/slides/routing/routing.component.html
+++ b/app/slides/routing/routing.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="content">
     <h1>Routing (Single Page Applications)</h1>
     <img [src]="resolvePath('routing.svg')">
 </div>
