--- a/app/slides/socket-observable-example/socket-observable-example.component.html
+++ b/app/slides/socket-observable-example/socket-observable-example.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="content">
     <h1>WebSockets Observable</h1>
     <source-code-view language="typescript" [relativeTo]="thisModuleId" name="example.ts.txt"></source-code-view>
 </div>
