--- a/app/slides/why-not-promises/why-not-promises.component.scss
+++ b/app/slides/why-not-promises/why-not-promises.component.scss
@@ -1,5 +1,23 @@
 
-/* why-not-promises */
-     
-div {
+div.content {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    font-size: 8vh;
+    font-weight: bold;
+    margin-bottom: 8vh;
+  }
+
+  li {
+    font-size: 4vh;
+    margin-bottom: 1vh;
+    > ul {
+      margin-top: 1vh;
+    }
+  }
+
 }
