--- a/app/slides/many-hats/many-hats.component.html
+++ b/app/slides/many-hats/many-hats.component.html
@@ -1,6 +1,6 @@
 
-<div>
-    <h1>Angular2</h1>
+<div class="content">
+    <h1>Wearing Many Hats ...</h1>
     <img [src]="resolvePath('Hats.jpg')">
     <div>
         © Jorge Royan /
