--- a/app/slides/many-hats/many-hats.component.scss
+++ b/app/slides/many-hats/many-hats.component.scss
@@ -1,5 +1,20 @@
+div.content {
 
-/* many-hats */
-     
-div {
+  text-align: center;
+
+  h1 {
+    font-size: 5vh;
+    font-weight: bold;
+  }
+
+  img {
+    width: 70vw;
+  }
+
+  div:nth-of-type(1) {
+    position: fixed;
+    bottom: 1.5vh;
+    left: 1.5vh;
+    font-size: 1.5vh;
+  }
 }
