Updating content and styles.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -18,6 +18,7 @@
     <many-hats class="slide"></many-hats>
     <angular-universal class="slide"></angular-universal>
     <angular-progressive-web class="slide"></angular-progressive-web>
+    <angular-electron class="slide"></angular-electron>
     <angular-nativescript class="slide"></angular-nativescript>
     <!-- next slide here -->
     <closing-page class="slide"></closing-page>
