--- a/app/slides/angular-progressive-web/angular-progressive-web.component.html
+++ b/app/slides/angular-progressive-web/angular-progressive-web.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="content">
     <h1>Progressive Web Applications</h1>
     <ul>
         <li>Progressively Enhanced (App Shell)</li>
