--- a/app/slides/angular-nativescript/angular-nativescript.component.html
+++ b/app/slides/angular-nativescript/angular-nativescript.component.html
@@ -1,7 +1,9 @@
 
-<div>
-    <h1>NativeScript and Angular</h1>
-    <img [src]="resolvePath('nativescript.svg')">
+<div class="content">
+    <h1>
+        <img [src]="resolvePath('nativescript.svg')">
+        <span>NativeScript and Angular</span>
+    </h1>
     <ul>
         <li>Truly Native Applications (using Javascript)</li>
         <li>Native Controls</li>
