--- a/app/slides/angular-universal/angular-universal.component.html
+++ b/app/slides/angular-universal/angular-universal.component.html
@@ -1,7 +1,9 @@
 
-<div>
-    <h1>Angular Universal</h1>
-    <img [src]="resolvePath('UniversalLogo.png')">
+<div class="content">
+    <h1>
+        <img [src]="resolvePath('UniversalLogo.png')">
+        <span>Angular Universal</span>
+    </h1>
     <ul>
         <li>
             Advantages
