Updating slide directive to a structural directive.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,25 +1,25 @@
 <div (keyup)="handleKey($event)" tabindex="1">
-    <title-page class="slide"></title-page>
-    <overview-page class="slide"></overview-page>
-    <react-overview class="slide"></react-overview>
-    <general-differences class="slide"></general-differences>
-    <components-overview class="slide"></components-overview>
-    <components-inputs class="slide"></components-inputs>
-    <components-outputs class="slide"></components-outputs>
-    <template-syntax class="slide"></template-syntax>
-    <components-tree class="slide"></components-tree>
-    <components-smart-dumb class="slide"></components-smart-dumb>
-    <dependency-injection class="slide"></dependency-injection>
-    <why-not-promises class="slide"></why-not-promises>
-    <observables class="slide"></observables>
-    <socket-observable-example class="slide"></socket-observable-example>
-    <routing class="slide"></routing>
-    <other-features class="slide"></other-features>
-    <many-hats class="slide"></many-hats>
-    <angular-universal class="slide"></angular-universal>
-    <angular-progressive-web class="slide"></angular-progressive-web>
-    <angular-electron class="slide"></angular-electron>
-    <angular-nativescript class="slide"></angular-nativescript>
+    <title-page *viewSlide="false"></title-page>
+    <overview-page *viewSlide="false"></overview-page>
+    <react-overview *viewSlide="false"></react-overview>
+    <general-differences *viewSlide="false"></general-differences>
+    <components-overview *viewSlide="false"></components-overview>
+    <components-inputs *viewSlide="false"></components-inputs>
+    <components-outputs *viewSlide="false"></components-outputs>
+    <template-syntax *viewSlide="false"></template-syntax>
+    <components-tree *viewSlide="false"></components-tree>
+    <components-smart-dumb *viewSlide="false"></components-smart-dumb>
+    <dependency-injection *viewSlide="false"></dependency-injection>
+    <why-not-promises *viewSlide="false"></why-not-promises>
+    <observables *viewSlide="false"></observables>
+    <socket-observable-example *viewSlide="false"></socket-observable-example>
+    <routing *viewSlide="false"></routing>
+    <other-features *viewSlide="false"></other-features>
+    <many-hats *viewSlide="false"></many-hats>
+    <angular-universal *viewSlide="false"></angular-universal>
+    <angular-progressive-web *viewSlide="false"></angular-progressive-web>
+    <angular-electron *viewSlide="false"></angular-electron>
+    <angular-nativescript *viewSlide="false"></angular-nativescript>
     <!-- next slide here -->
-    <closing-page class="slide"></closing-page>
+    <closing-page *viewSlide="false"></closing-page>
 </div>
