Updating content and styles.

--- a/app/slides/closing-page/closing-page.component.html
+++ b/app/slides/closing-page/closing-page.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div>Thanks!</div>
-    <div>http://github.com/dfbaskin/the-new-angular2-framework</div>
+    <div>https://github.com/dfbaskin/the-new-angular2-framework</div>
     <div>Questions?</div>
     <div>
         <span>
