--- a/app/slides/observables/observables.component.html
+++ b/app/slides/observables/observables.component.html
@@ -9,7 +9,7 @@
             Stream of
             <ul>
                 <li>any number of things</li>
-                <li>over any lenght of time</li>
+                <li>over any length of time</li>
             </ul>
         </li>
         <li>
@@ -21,9 +21,9 @@
                 <li>Error Handling</li>
             </ul>
         </li>
+        <li>Observables declare intent</li>
         <li>Lazy (requires Subscription)</li>
         <li>Fully cancellable (including tear-down)</li>
         <li>Orchestration (like LoDash for async)</li>
-        <li>Observables declare intent</li>
     </ul>
 </div>
