--- a/app/slides/overview-page/overview-page.component.html
+++ b/app/slides/overview-page/overview-page.component.html
@@ -9,7 +9,8 @@
                 <li>Web Components</li>
                 <li>Unidirectional Data Flow</li>
                 <li>Observables</li>
-                <li>Web Workers</li>
+                <li>Web Workers / Service Workers</li>
+                <li>ES2015 / TypeScript</li>
             </ul>
         </li>
     </ul>
