--- a/app/slides/socket-observable-example/socket-observable-example.component.html
+++ b/app/slides/socket-observable-example/socket-observable-example.component.html
@@ -2,4 +2,5 @@
 <div class="content">
     <h1>WebSockets Observable</h1>
     <source-code-view language="typescript" [relativeTo]="thisModuleId" name="example.ts.txt"></source-code-view>
+    <p>Source: Ben Lesh / <a href="https://twitter.com/BenLesh">@BenLesh</a></p>
 </div>
