--- a/app/slides/socket-observable-example/socket-observable-example.component.scss
+++ b/app/slides/socket-observable-example/socket-observable-example.component.scss
@@ -5,4 +5,11 @@ div.content {
     font-weight: bold;
     text-align: center;
   }
+
+  p {
+    position: fixed;
+    bottom: 1.5vh;
+    left: 1.5vh;
+    font-size: 1.5vh;
+  }
 }
